--- a/workspace/ims-webapp/src/main/resources/reports/jrxml/TA_FORM_TS01_01.jrxml
+++ b/workspace/ims-webapp/src/main/resources/reports/jrxml/TA_FORM_TS01_01.jrxml
@@ -11,12 +11,6 @@
 	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
 	<style name="Topic" vTextAlign="Middle" vImageAlign="Middle" fontName="TH Sarabun New" fontSize="18" isBold="true"/>
 	<style name="TextDetail" hTextAlign="Left" vTextAlign="Bottom" vImageAlign="Middle" rotation="None" fontName="TH Sarabun New" fontSize="16"/>
-	<style name="data" hTextAlign="Left" vTextAlign="Bottom" vImageAlign="Middle" rotation="None" fontName="TH Sarabun New" fontSize="16">
-		<box>
-			<pen lineWidth="0.0" lineStyle="Dotted"/>
-			<bottomPen lineWidth="3.0" lineStyle="Dotted"/>
-		</box>
-	</style>
 	<parameter name="logo" class="java.io.InputStream"/>
 	<parameter name="newRegId" class="java.lang.String"/>
 	<parameter name="factoryName" class="java.lang.String"/>
@@ -46,16 +40,16 @@
 	<pageHeader>
 		<band height="731" splitType="Stretch">
 			<image isUsingCache="false">
-				<reportElement isPrintRepeatedValues="false" x="195" y="0" width="60" height="60" uuid="8acc1f25-cb66-413d-a9c0-e08548d94a46"/>
+				<reportElement isPrintRepeatedValues="false" x="200" y="0" width="60" height="60" uuid="8acc1f25-cb66-413d-a9c0-e08548d94a46"/>
 				<imageExpression><![CDATA[$P{logo}]]></imageExpression>
 			</image>
 			<textField>
-				<reportElement style="Topic" x="389" y="25" width="71" height="25" uuid="6d1514d6-b255-44a7-b908-8165137638d3"/>
+				<reportElement style="Topic" x="380" y="35" width="80" height="25" uuid="6d1514d6-b255-44a7-b908-8165137638d3"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA["ตส. ๐๑-๐๑"]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement style="Topic" x="0" y="66" width="460" height="25" uuid="861f16b3-f966-4bff-b95f-486a25fe61c6"/>
+				<reportElement style="Topic" x="0" y="60" width="460" height="25" uuid="861f16b3-f966-4bff-b95f-486a25fe61c6"/>
 				<textElement textAlignment="Center" verticalAlignment="Bottom"/>
 				<textFieldExpression><![CDATA["บันทึกผลการวิเคราะห์การชำระภาษีสรรพสามิต"]]></textFieldExpression>
 			</textField>
@@ -65,7 +59,7 @@
 				<textFieldExpression><![CDATA["ราย"]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement style="data" x="20" y="91" width="191" height="22" uuid="a2a8c9f4-2834-4e20-804f-3aa5024dced2"/>
+				<reportElement style="TextDetail" x="20" y="91" width="191" height="22" uuid="a2a8c9f4-2834-4e20-804f-3aa5024dced2"/>
 				<box topPadding="0" leftPadding="2" bottomPadding="0" rightPadding="2">
 					<pen lineWidth="1.5" lineStyle="Dotted"/>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -82,7 +76,7 @@
 				<textFieldExpression><![CDATA["ประเภทกิจการ"]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement style="data" x="278" y="91" width="182" height="22" uuid="83d07c38-4f52-4630-ba94-22e694e2bf39"/>
+				<reportElement style="TextDetail" x="278" y="91" width="182" height="22" uuid="83d07c38-4f52-4630-ba94-22e694e2bf39"/>
 				<box topPadding="0" leftPadding="2" bottomPadding="0" rightPadding="2">
 					<pen lineWidth="1.5" lineStyle="Dotted"/>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -99,7 +93,7 @@
 				<textFieldExpression><![CDATA["ทะเบียนสรรพสามิตเลขที่"]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement style="data" x="109" y="113" width="351" height="22" uuid="5f69a886-39c0-4836-9ecc-01463e8c08ef"/>
+				<reportElement style="TextDetail" x="109" y="113" width="351" height="22" uuid="5f69a886-39c0-4836-9ecc-01463e8c08ef"/>
 				<box topPadding="0" leftPadding="2" bottomPadding="0" rightPadding="2">
 					<pen lineWidth="1.5" lineStyle="Dotted"/>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -116,7 +110,7 @@
 				<textFieldExpression><![CDATA["ที่อยู่"]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement style="data" x="23" y="135" width="437" height="22" uuid="accbba75-3070-44ac-a9c6-97fa0ae55b2b"/>
+				<reportElement style="TextDetail" x="23" y="135" width="437" height="22" uuid="accbba75-3070-44ac-a9c6-97fa0ae55b2b"/>
 				<box topPadding="0" leftPadding="2" bottomPadding="0" rightPadding="2">
 					<pen lineWidth="1.5" lineStyle="Dotted"/>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -135,7 +129,7 @@
 				<textFieldExpression><![CDATA["รอบระยะเวลาที่ทำการวิเคราะห์ตั้งแต่"]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement style="data" x="160" y="157" width="300" height="22" uuid="96c6a242-5b28-46bb-9d92-a0946cd6b64a"/>
+				<reportElement style="TextDetail" x="160" y="157" width="300" height="22" uuid="96c6a242-5b28-46bb-9d92-a0946cd6b64a"/>
 				<box topPadding="0" leftPadding="3" bottomPadding="0" rightPadding="3">
 					<pen lineWidth="1.5" lineStyle="Dotted"/>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -158,7 +152,7 @@
 				<textFieldExpression><![CDATA["๑."]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement style="data" x="48" y="201" width="318" height="22" uuid="a074c32c-f89f-4541-b51c-77ba240b840a"/>
+				<reportElement style="TextDetail" x="48" y="201" width="318" height="22" uuid="a074c32c-f89f-4541-b51c-77ba240b840a"/>
 				<box topPadding="0" leftPadding="2" bottomPadding="0" rightPadding="2">
 					<pen lineWidth="1.5" lineStyle="Dotted"/>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -175,7 +169,7 @@
 				<textFieldExpression><![CDATA["๒."]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement style="data" x="48" y="223" width="318" height="22" uuid="9f3f2f76-f94b-4eba-93d4-932231097575"/>
+				<reportElement style="TextDetail" x="48" y="223" width="318" height="22" uuid="9f3f2f76-f94b-4eba-93d4-932231097575"/>
 				<box topPadding="0" leftPadding="2" bottomPadding="0" rightPadding="2">
 					<pen lineWidth="1.5" lineStyle="Dotted"/>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -192,7 +186,7 @@
 				<textFieldExpression><![CDATA["๓."]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement style="data" x="48" y="245" width="318" height="22" uuid="0dd6ae32-4980-4068-ba8c-e11d5518b740"/>
+				<reportElement style="TextDetail" x="48" y="245" width="318" height="22" uuid="0dd6ae32-4980-4068-ba8c-e11d5518b740"/>
 				<box topPadding="0" leftPadding="2" bottomPadding="0" rightPadding="2">
 					<pen lineWidth="1.5" lineStyle="Dotted"/>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -209,7 +203,7 @@
 				<textFieldExpression><![CDATA["๔."]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement style="data" x="48" y="267" width="318" height="22" uuid="3d9d7d90-8c45-445d-8eda-b48dd0798766"/>
+				<reportElement style="TextDetail" x="48" y="267" width="318" height="22" uuid="3d9d7d90-8c45-445d-8eda-b48dd0798766"/>
 				<box topPadding="0" leftPadding="2" bottomPadding="0" rightPadding="2">
 					<pen lineWidth="1.5" lineStyle="Dotted"/>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -226,7 +220,7 @@
 				<textFieldExpression><![CDATA["๕."]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement style="data" x="48" y="289" width="318" height="22" uuid="8c8f3b39-e28d-4775-b050-c00b25941753"/>
+				<reportElement style="TextDetail" x="48" y="289" width="318" height="22" uuid="8c8f3b39-e28d-4775-b050-c00b25941753"/>
 				<box topPadding="0" leftPadding="2" bottomPadding="0" rightPadding="2">
 					<pen lineWidth="1.5" lineStyle="Dotted"/>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -243,7 +237,7 @@
 				<textFieldExpression><![CDATA["เรียน"]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement style="data" x="25" y="311" width="194" height="22" uuid="d432dee3-0504-4f1b-b178-b2c3061bfcde"/>
+				<reportElement style="TextDetail" x="25" y="311" width="195" height="22" uuid="d432dee3-0504-4f1b-b178-b2c3061bfcde"/>
 				<box topPadding="0" leftPadding="2" bottomPadding="0" rightPadding="2">
 					<pen lineWidth="1.5" lineStyle="Dotted"/>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -262,9 +256,7 @@
 			<textField isBlankWhenNull="true">
 				<reportElement style="TextDetail" x="0" y="355" width="460" height="66" uuid="3c95d6c7-7af3-4949-86e9-c23214c94137"/>
 				<box topPadding="0" leftPadding="2" bottomPadding="0" rightPadding="2"/>
-				<textElement textAlignment="Left" verticalAlignment="Top">
-					<font fontName="TH Sarabun New"/>
-				</textElement>
+				<textElement textAlignment="Left" verticalAlignment="Top"/>
 				<textFieldExpression><![CDATA[$P{analysisResultText}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
@@ -273,7 +265,7 @@
 				<textFieldExpression><![CDATA["จึงเห็นสมควร"]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
-				<reportElement positionType="Float" x="139" y="425" width="30" height="22" uuid="a8398076-939d-44ee-9b46-c0249e06c1a4"/>
+				<reportElement style="TextDetail" positionType="Float" x="139" y="425" width="30" height="22" uuid="a8398076-939d-44ee-9b46-c0249e06c1a4"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="DejaVu Sans" size="16"/>
 				</textElement>
@@ -285,7 +277,7 @@
 				<textFieldExpression><![CDATA["ขออนุมัติออกหนังสือเรียก"]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
-				<reportElement x="139" y="447" width="30" height="22" uuid="74c7e816-1599-4b15-bcfa-fa62ae36b086"/>
+				<reportElement style="TextDetail" x="139" y="447" width="30" height="22" uuid="74c7e816-1599-4b15-bcfa-fa62ae36b086"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="DejaVu Sans" size="16"/>
 				</textElement>
@@ -297,7 +289,7 @@
 				<textFieldExpression><![CDATA["อื่น ๆ"]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement style="data" x="199" y="447" width="139" height="22" uuid="1cf7f39b-a1fc-4284-8deb-1c7f45a7bab2"/>
+				<reportElement style="TextDetail" x="199" y="447" width="139" height="22" uuid="1cf7f39b-a1fc-4284-8deb-1c7f45a7bab2"/>
 				<box topPadding="0" leftPadding="2" bottomPadding="0" rightPadding="2">
 					<pen lineWidth="1.5" lineStyle="Dotted"/>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -319,7 +311,7 @@
 				<textFieldExpression><![CDATA["("]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement style="data" x="200" y="491" width="120" height="22" uuid="1c1abed8-ef84-4619-a80f-a6f3d6c1bb83"/>
+				<reportElement style="TextDetail" x="200" y="491" width="120" height="22" uuid="1c1abed8-ef84-4619-a80f-a6f3d6c1bb83"/>
 				<box topPadding="0" leftPadding="3" bottomPadding="0" rightPadding="3">
 					<pen lineWidth="1.5" lineStyle="Dotted"/>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -348,7 +340,7 @@
 				<textFieldExpression><![CDATA["("]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement style="data" x="200" y="535" width="120" height="22" uuid="9c576674-4c07-483e-9d07-f4d34a87acdd"/>
+				<reportElement style="TextDetail" x="200" y="535" width="120" height="22" uuid="9c576674-4c07-483e-9d07-f4d34a87acdd"/>
 				<box topPadding="0" leftPadding="3" bottomPadding="0" rightPadding="3">
 					<pen lineWidth="1.5" lineStyle="Dotted"/>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -367,7 +359,7 @@
 				<textFieldExpression><![CDATA[")"]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement style="data" x="200" y="557" width="120" height="22" uuid="a8c8b0f6-a095-4cb2-a247-8cca06002fa4"/>
+				<reportElement style="TextDetail" x="200" y="557" width="120" height="22" uuid="a8c8b0f6-a095-4cb2-a247-8cca06002fa4"/>
 				<box topPadding="0" leftPadding="3" bottomPadding="0" rightPadding="3">
 					<pen lineWidth="1.5" lineStyle="Dotted"/>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -386,7 +378,7 @@
 				<textFieldExpression><![CDATA["คำสั่งผู้บังคับบัญชาตามสายงาน"]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
-				<reportElement positionType="Float" x="32" y="602" width="30" height="22" uuid="6eda04e6-abb0-4aba-88b5-eba3af534fe7"/>
+				<reportElement style="TextDetail" positionType="Float" x="32" y="602" width="30" height="22" uuid="6eda04e6-abb0-4aba-88b5-eba3af534fe7"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="DejaVu Sans" size="16"/>
 				</textElement>
@@ -398,7 +390,7 @@
 				<textFieldExpression><![CDATA["อนุมัติ"]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
-				<reportElement x="120" y="602" width="30" height="22" uuid="02fc4a63-fbbd-466f-990d-e6ad876449f7"/>
+				<reportElement style="TextDetail" x="120" y="602" width="30" height="22" uuid="02fc4a63-fbbd-466f-990d-e6ad876449f7"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="DejaVu Sans" size="16"/>
 				</textElement>
@@ -420,7 +412,7 @@
 				<textFieldExpression><![CDATA["("]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement style="data" x="200" y="664" width="120" height="22" uuid="5e482869-f257-4767-8a97-3925732c7c3b"/>
+				<reportElement style="TextDetail" x="200" y="664" width="120" height="22" uuid="5e482869-f257-4767-8a97-3925732c7c3b"/>
 				<box topPadding="0" leftPadding="3" bottomPadding="0" rightPadding="3">
 					<pen lineWidth="1.5" lineStyle="Dotted"/>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -444,7 +436,7 @@
 				<textFieldExpression><![CDATA["ตำแหน่ง"]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement style="data" x="200" y="686" width="120" height="22" uuid="933096c2-99ee-495e-bdc9-6ad8bd178d51"/>
+				<reportElement style="TextDetail" x="200" y="686" width="120" height="22" uuid="933096c2-99ee-495e-bdc9-6ad8bd178d51"/>
 				<box topPadding="0" leftPadding="3" bottomPadding="0" rightPadding="3">
 					<pen lineWidth="1.5" lineStyle="Dotted"/>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -463,7 +455,7 @@
 				<textFieldExpression><![CDATA["วันเดือนปี"]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement style="data" x="204" y="708" width="116" height="22" uuid="e9b9a8c5-b29a-4e40-87cd-2a896da77ee0"/>
+				<reportElement style="TextDetail" x="204" y="708" width="116" height="22" uuid="e9b9a8c5-b29a-4e40-87cd-2a896da77ee0"/>
 				<box topPadding="0" leftPadding="3" bottomPadding="0" rightPadding="3">
 					<pen lineWidth="1.5" lineStyle="Dotted"/>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -537,7 +529,7 @@
 				</graphicElement>
 			</line>
 			<line>
-				<reportElement x="25" y="326" width="194" height="1" uuid="2b543d49-a6df-4fbb-868b-81692668796a"/>
+				<reportElement x="25" y="326" width="195" height="1" uuid="2b543d49-a6df-4fbb-868b-81692668796a"/>
 				<graphicElement>
 					<pen lineWidth="0.5" lineStyle="Dotted"/>
 				</graphicElement>
